Ported things to Java19.