@@ -1,13 +1,13 @@
 package com.itemis.fluffyj.memory.internal.impl;
 
-import static jdk.incubator.foreign.MemorySegment.allocateNative;
+import static java.lang.foreign.MemorySegment.allocateNative;
 
 import com.itemis.fluffyj.memory.api.FluffySegment;
 
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemoryLayout;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
 
 /**
  * Default implementation of a segment.
@@ -15,7 +15,7 @@ import jdk.incubator.foreign.ResourceScope;
 public abstract class FluffySegmentImpl implements FluffySegment {
 
     protected final MemorySegment backingSeg;
-    protected final ResourceScope scope;
+    protected final MemorySession session;
 
     /**
      * Wrap the provided {@link MemorySegment}.
@@ -24,7 +24,7 @@ public abstract class FluffySegmentImpl implements FluffySegment {
      */
     public FluffySegmentImpl(MemorySegment backingSeg) {
         this.backingSeg = backingSeg;
-        this.scope = backingSeg.scope();
+        this.session = backingSeg.session();
     }
 
     /**
@@ -32,17 +32,17 @@ public abstract class FluffySegmentImpl implements FluffySegment {
      *
      * @param initialValue - The new segment will hold this value.
      * @param layout - The new segment will have this {@link MemoryLayout}.
-     * @param scope - The new segment will be attached to this scope, i. e. if this scope is closed,
-     *        the segment will not be alive anymore.
+     * @param session - The new segment will be attached to this session, i. e. if this session is
+     *        closed, the segment will not be alive anymore.
      */
-    public FluffySegmentImpl(byte[] initialValue, MemoryLayout layout, ResourceScope scope) {
-        this(allocateNative(layout, scope));
+    public FluffySegmentImpl(byte[] initialValue, MemoryLayout layout, MemorySession session) {
+        this(allocateNative(layout, session));
         backingSeg.asByteBuffer().order(FLUFFY_SEGMENT_BYTE_ORDER).put(initialValue);
     }
 
     @Override
     public boolean isAlive() {
-        return scope.isAlive();
+        return session.isAlive();
     }
 
     @Override
