@@ -2,7 +2,7 @@ package com.itemis.fluffyj.memory;
 
 import static com.itemis.fluffyj.memory.FluffyMemory.pointer;
 import static com.itemis.fluffyj.tests.FluffyTestHelper.assertNullArgNotAccepted;
-import static jdk.incubator.foreign.MemoryAddress.NULL;
+import static java.lang.foreign.MemoryAddress.NULL;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
@@ -10,13 +10,13 @@ import com.itemis.fluffyj.memory.api.FluffyPointer;
 import com.itemis.fluffyj.memory.api.FluffyScalarSegment;
 import com.itemis.fluffyj.memory.api.FluffyVectorSegment;
 import com.itemis.fluffyj.memory.error.FluffyMemoryException;
-import com.itemis.fluffyj.memory.tests.MemoryScopedTest;
+import com.itemis.fluffyj.memory.tests.MemorySessionEnabledTest;
 
 import org.junit.jupiter.api.Test;
 
-import jdk.incubator.foreign.MemoryAddress;
+import java.lang.foreign.MemoryAddress;
 
-class PointerBasicsTest extends MemoryScopedTest {
+class PointerBasicsTest extends MemorySessionEnabledTest {
 
     @Test
     void allocate_scalar_pointer_with_unknown_type_yields_exception() {
@@ -26,8 +26,8 @@ class PointerBasicsTest extends MemoryScopedTest {
     }
 
     @Test
-    void allocate_scalar_pointer_and_scope_with_unknown_type_yields_exception() {
-        assertThatThrownBy(() -> pointer().to(NULL).as(MyType.class).allocate(scope))
+    void allocate_scalar_pointer_and_session_with_unknown_type_yields_exception() {
+        assertThatThrownBy(() -> pointer().to(NULL).as(MyType.class).allocate(session))
             .isInstanceOf(FluffyMemoryException.class)
             .hasMessage("Cannot allocate scalar pointer of unknown type: " + MyType.class.getCanonicalName());
     }
@@ -40,8 +40,8 @@ class PointerBasicsTest extends MemoryScopedTest {
     }
 
     @Test
-    void allocate_vector_pointer_and_scope_with_unknown_type_yields_exception() {
-        assertThatThrownBy(() -> pointer().to(NULL).asArray(1).of(MyType[].class).allocate(scope))
+    void allocate_vector_pointer_and_session_with_unknown_type_yields_exception() {
+        assertThatThrownBy(() -> pointer().to(NULL).asArray(1).of(MyType[].class).allocate(session))
             .isInstanceOf(FluffyMemoryException.class)
             .hasMessage("Cannot allocate vector pointer of unknown type: " + MyType[].class.getCanonicalName());
     }
@@ -71,14 +71,14 @@ class PointerBasicsTest extends MemoryScopedTest {
     }
 
     @Test
-    void can_create_scoped_empty_pointer() {
-        var result = pointer().allocate(scope);
+    void can_create_sessiond_empty_pointer() {
+        var result = pointer().allocate(session);
         assertThat(result).isInstanceOf(FluffyPointer.class);
     }
 
     @Test
-    void empty_pointer_creation_does_not_accept_null_scoped() {
-        assertNullArgNotAccepted(() -> pointer().allocate(null), "scope");
+    void empty_pointer_creation_does_not_accept_null_sessioned() {
+        assertNullArgNotAccepted(() -> pointer().allocate(null), "session");
     }
 
     private static final class MyType {
