@@ -3,36 +3,36 @@ package com.itemis.fluffyj.memory;
 import static com.itemis.fluffyj.memory.FluffyMemory.segment;
 import static com.itemis.fluffyj.memory.FluffyMemory.wrap;
 import static com.itemis.fluffyj.tests.FluffyTestHelper.assertNullArgNotAccepted;
-import static jdk.incubator.foreign.MemoryAddress.NULL;
-import static jdk.incubator.foreign.MemorySegment.allocateNative;
+import static java.lang.foreign.MemoryAddress.NULL;
+import static java.lang.foreign.MemorySegment.allocateNative;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import com.itemis.fluffyj.memory.api.FluffyScalarSegment;
 import com.itemis.fluffyj.memory.api.FluffyVectorSegment;
 import com.itemis.fluffyj.memory.error.FluffyMemoryException;
-import com.itemis.fluffyj.memory.tests.MemoryScopedTest;
+import com.itemis.fluffyj.memory.tests.MemorySessionEnabledTest;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import jdk.incubator.foreign.MemorySegment;
+import java.lang.foreign.MemorySegment;
 
-class SegmentBasicsTest extends MemoryScopedTest {
+class SegmentBasicsTest extends MemorySessionEnabledTest {
 
     private MemorySegment nativeSeg;
 
     @BeforeEach
     void setUp() {
-        nativeSeg = allocateNative(1, scope);
+        nativeSeg = allocateNative(1, session);
     }
 
     @Test
     void allocate_with_null_yields_npe() {
         var pointerAlloc = new FluffyMemoryScalarPointerAllocator<>(NULL, Object.class);
-        assertNullArgNotAccepted(() -> pointerAlloc.allocate(null), "scope");
+        assertNullArgNotAccepted(() -> pointerAlloc.allocate(null), "session");
 
         var segmentAlloc = new FluffyMemoryScalarSegmentAllocator<>(NULL);
-        assertNullArgNotAccepted(() -> segmentAlloc.allocate(null), "scope");
+        assertNullArgNotAccepted(() -> segmentAlloc.allocate(null), "session");
     }
 
     @Test
@@ -43,24 +43,26 @@ class SegmentBasicsTest extends MemoryScopedTest {
     }
 
     @Test
-    void allocate_scalar_seg_with_scope_and_unknown_type_yields_exception() {
-        assertThatThrownBy(() -> segment().of(new MyType()).allocate(scope))
+    void allocate_scalar_seg_with_session_and_unknown_type_yields_exception() {
+        assertThatThrownBy(() -> segment().of(new MyType()).allocate(session))
             .isInstanceOf(FluffyMemoryException.class)
             .hasMessage("Cannot allocate scalar segment of unknown type: " + MyType.class.getCanonicalName());
     }
 
     @Test
-    void allocate_vector_seg_with_scope_and_unknown_type_yields_exception() {
-        assertThatThrownBy(() -> segment().ofArray(new MyType[0]).allocate(scope))
+    void allocate_vector_seg_with_session_and_unknown_type_yields_exception() {
+        assertThatThrownBy(() -> segment().ofArray(new MyType[0]).allocate(session))
             .isInstanceOf(FluffyMemoryException.class)
-            .hasMessage("Cannot allocate vector segment of unknown type: " + MyType.class.arrayType().getCanonicalName());
+            .hasMessage(
+                "Cannot allocate vector segment of unknown type: " + MyType.class.arrayType().getCanonicalName());
     }
 
     @Test
     void allocate_vector_seg_with_unknown_type_yields_exception() {
         assertThatThrownBy(() -> segment().ofArray(new MyType[0]).allocate())
             .isInstanceOf(FluffyMemoryException.class)
-            .hasMessage("Cannot allocate vector segment of unknown type: " + MyType.class.arrayType().getCanonicalName());
+            .hasMessage(
+                "Cannot allocate vector segment of unknown type: " + MyType.class.arrayType().getCanonicalName());
     }
 
 
